# luau-grader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: luaugraderrc.example.json
luau-grader-cli/: Cargo.toml
luau-grader-cli/src/: main.rs
luau-grader-core/: Cargo.toml
luau-grader-core/src/: batch.rs  config.rs  errors.rs  export.rs  fixer.rs  grade.rs  lib.rs  metrics.rs  report.rs  ruleset_config.rs  scorer.rs  suppression.rs  workspace.rs
luau-grader-core/src/analyzer/: context.rs  mod.rs  walker.rs
luau-grader-core/src/rulesets/: advanced.rs  beginner.rs  front_page.rs  intermediate.rs  mod.rs  security.rs
luau-grader-core/src/workspace_rules/: cyclic.rs  dead_code.rs  mod.rs
luau-grader-core/tests/: rules.rs
luau-grader-core/tests/dummy_project/: a.luau  b.luau  c.luau
luau-grader-core/tests/test_project/: a.luau  b.luau  c.luau  d.luau  dead_feature_1.luau  dead_feature_2.luau  e.luau  f.luau  g.luau  h.luau  init.luau
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
themes/: dracula.json  monochrome.json  tokyo_night.json
