[package]
name = "luau-grader-app"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
luau-grader-core = { path = "../luau-grader-core" }
tauri-plugin-dialog = "2.6.0"
rfd = "0.17.2"
